test_case/rust-lang_rust/52032_402301295_2.rs
\n"},"level":"error","spans":[{"filror","spans":[{"file_name":"/checkout/src/test/ui/feature-gate-abi.rs","byte_start":929,"byte_end":958,"line_start":23,"line_end":23,"column_start":1,"column_end":30,"is_primary":true,"text":[{"text":"extern \"rust-call\" fn f4() {} //~ ERROR rust-call ABI is subject to change","highlight_start":1,"highlight_end":30}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"add #![feature(unboxed_closures)] to the crate attributes to enable","code":null,"level":"help","spans":[],"children":[],"rendered":null}],"rendered":"error[E0658]: rust-call ABI is subject to change (see issue #29625)\n  --> /checkout/src/test/ui/feature-gate-abi.rs:23:1\n   |\nLL | extern \"rust-call\" fn f4() {} //~ ERROR rust-call ABI is subject to change\n   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n   |\n   = help: add #![feature(unboxed_closures)] to the crate attributes to enable\n\n"}
[00:45:15] {"message":"msp430-interrupt ABI is experimental and subject to change (see issue #38487)","code":{"code":"E0658","explanation":"\nAn unstable feature was used.\n\nErroneous code example:\n\n